# product-axum

./: .gitignore  Cargo.toml  README.md  build.rs
proto/helloworld/: helloworld.proto
src/: main.rs
src/domain/: index.rs  item.rs  mod.rs  rental.rs
src/web/controller/: index.rs  item_controller.rs  mod.rs  rental_controller.rs
